--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="all_leagues">ALL LEAGUES</string>
 
     <string name="read_more">READ MORE</string>
+    <string name="trending">Trending</string>
 
     <string name="upcoming">Upcoming</string>
     <string name="past_matches">Past Matches</string>
@@ -48,6 +49,22 @@
     <string name="lineups">Lineups</string>
     <string name="stats">Stats</string>
     <string name="comment">Comment</string>
+    <string name="full_time">Full time</string>
+
+    <string name="shots_on_target">Shots on target</string>
+    <string name="possession">Possession</string>
+    <string name="passes">Passes</string>
+    <string name="pass_accuracy">Pass accuracy</string>
+    <string name="fouls">Fouls</string>
+    <string name="yellow_cards">Yellow cards</string>
+    <string name="red_cards">Red cards</string>
+    <string name="offsides">Offsides</string>
+    <string name="corners">Corners</string>
+    <string name="goalkeeper">Goalkeeper</string>
+    <string name="defender">Defender</string>
+    <string name="midfielder">Midfielder</string>
+    <string name="forward">Forward</string>
+    <string name="write_a_comment">Write a comment</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
