--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,14 @@
     <string name="midfielder">Midfielder</string>
     <string name="forward">Forward</string>
     <string name="write_a_comment">Write a comment</string>
+
+    <string name="favorite">Favorite</string>
+    <string name="notification">Notification</string>
+    <string name="log_out">Log out</string>
+    <string name="language">Language</string>
+    <string name="about">About</string>
+    <string name="feedback">Feedback</string>
+    <string name="my_favorite">My favorite</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
