--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,12 +10,20 @@
     <string name="sign_up">Sign up</string>
     <string name="create_account">Create Account</string>
     <string name="email">Email</string>
+    <string name="username">Username</string>
     <string name="password">Password</string>
+    <string name="wrong_username_or_password">Wrong username or password</string>
     <string name="forgot_password">Forgot Password?</string>
+    <string name="email_exist">Email already exists</string>
+    <string name="password_not_match">Password not match</string>
+    <string name="please_fill_all_fields">Please fill all fields</string>
+    <string name="email_not_found">Email not found</string>
+    <string name="please_enter_valid_email">Please enter a valid email</string>
+    <string name="wrong_code">Wrong code, please try again</string>
     <string name="your_name">Your name</string>
     <string name="your_email">Your email</string>
     <string name="confirm_password">Confirm your Password</string>
-    <string name="password_warning">Password must be at least 8 characters long and include 1 capital letter.</string>
+    <string name="password_warning">Password must be at least 6 characters long.</string>
     <string name="verify">Verify</string>
     <string name="verify_description">Enter the code we sent you to email.</string>
     <string name="enter_your_email">Enter your email to get OTP</string>
