--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,6 +73,7 @@
     <string name="midfielder">Midfielder</string>
     <string name="forward">Forward</string>
     <string name="write_a_comment">Write a comment</string>
+    <string name="shots">Shots</string>
 
     <string name="favorite">Favorite</string>
     <string name="notification">Notification</string>
